--- a/week1/style.css
+++ b/week1/style.css
@@ -1,6 +1,6 @@
 /* I'm not sure what the width/height should be and if i called the query correctly */
 
-@media only screen and (max-width: 1600px) {
+@media only screen and (min-width: 600px) {
     /* for mobile: */
     .container {width: 800px;}
 }
